.local-k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gram-local
  labels:
    app.kubernetes.io/part-of: gram-local
